--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,8 @@
     "focus-trap": "^7.6.5",
     "pinia": "^3.0.3",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.13",
