feat(storage): integrate MinIO for S3-compatible storage and implement file upload security
- Added MinIO service to docker-compose for local S3-compatible storage.
- Updated backend configuration to support MinIO with environment variables for access keys and bucket name.
- Implemented S3 bucket initialization in the application startup process.
- Enhanced file upload security with MIME type validation, size limits, and EXIF metadata stripping.
- Created new API endpoints for managing session attachments, including upload, list, download, and delete functionalities.
- Updated documentation to reflect new storage configuration and file upload security measures.

This integration ensures HIPAA compliance and improves the overall file management system within the application.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -27,6 +27,15 @@ ENCRYPTION_MASTER_KEY=your-base64-encoded-32-byte-key-here
 AWS_REGION=us-east-1
 SECRETS_MANAGER_KEY_NAME=pazpaz/encryption-key-v1
 
+# S3/MinIO Storage
+# Development: Use MinIO (localhost:9000)
+# Production: Use AWS S3 with https:// endpoint
+S3_ENDPOINT_URL=http://localhost:9000
+S3_ACCESS_KEY=minioadmin
+S3_SECRET_KEY=minioadmin123
+S3_BUCKET_NAME=pazpaz-attachments
+S3_REGION=us-east-1
+
 # Frontend
 FRONTEND_URL=http://localhost:5173
 
