--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,29 @@ services:
     logging:
       driver: none
 
+  minio:
+    image: minio/minio:latest
+    container_name: pazpaz-minio
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: ${S3_ACCESS_KEY:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${S3_SECRET_KEY:-minioadmin123}
+      # Note: SSE-S3 encryption is enabled per-bucket via API (see create_storage_buckets.py)
+      # MINIO_KMS_AUTO_ENCRYPTION requires external KMS setup (not needed for development)
+    ports:
+      - "9000:9000"  # S3 API
+      - "9001:9001"  # MinIO Console (Web UI)
+    volumes:
+      - minio_data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   redis_data:
+  minio_data:
