docs: consolidate documentation structure and enhance security guidelines
- Updated the main documentation structure to consolidate all resources under a single `/docs/` directory, providing a unified source of truth.
- Enhanced the security section in the backend README to include additional resources for file upload security and storage configuration.
- Added detailed navigation instructions for accessing specific documentation areas related to security, backend, frontend, and testing.
- Removed outdated and redundant documentation files to streamline the project structure and improve accessibility.

This update improves the clarity and organization of project documentation, ensuring that all team members can easily find relevant information while adhering to security best practices.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -30,11 +30,44 @@ SECRETS_MANAGER_KEY_NAME=pazpaz/encryption-key-v1
 # S3/MinIO Storage
 # Development: Use MinIO (localhost:9000)
 # Production: Use AWS S3 with https:// endpoint
+#
+# SECURITY WARNING: Never use default credentials in production!
+# Default credentials (minioadmin/minioadmin123) are ONLY acceptable for
+# local development on localhost (127.0.0.1). Change immediately if:
+# - MinIO is exposed to network (0.0.0.0 or public IP)
+# - Deploying to staging or production environments
+# - Running on shared development servers
+#
+# Generate strong credentials with:
+#   openssl rand -base64 16 | tr -d '/+=' | cut -c1-16  # Username (16 chars)
+#   openssl rand -base64 32 | tr -d '/+=' | cut -c1-32  # Password (32 chars)
+#
+# Password Requirements:
+#   - Minimum 20 characters (32 recommended)
+#   - Include uppercase, lowercase, numbers, symbols
+#   - No dictionary words or sequential characters
+#   - Rotate every 90 days (production), 180 days (development)
+#
+# See docs/storage/S3_CREDENTIAL_MANAGEMENT.md for full guidance
+#
 S3_ENDPOINT_URL=http://localhost:9000
-S3_ACCESS_KEY=minioadmin
-S3_SECRET_KEY=minioadmin123
+S3_ACCESS_KEY=your-secure-username-here  # Min 12 chars, change default!
+S3_SECRET_KEY=your-secure-password-here  # Min 20 chars (32 recommended), change default!
 S3_BUCKET_NAME=pazpaz-attachments
 S3_REGION=us-east-1
+#
+# Production AWS S3 Configuration:
+# For production, use AWS IAM roles (preferred) or AWS Secrets Manager:
+# - IAM Roles: Leave S3_ACCESS_KEY and S3_SECRET_KEY empty (boto3 uses role)
+# - Secrets Manager: Fetch credentials at runtime (see S3_CREDENTIAL_MANAGEMENT.md)
+# - S3_ENDPOINT_URL: Leave empty for AWS S3 (uses default https endpoint)
+#
+# Production Example (IAM Role):
+#   S3_ENDPOINT_URL=
+#   S3_ACCESS_KEY=
+#   S3_SECRET_KEY=
+#   S3_BUCKET_NAME=pazpaz-attachments-prod
+#   S3_REGION=us-west-2
 
 # Frontend
 FRONTEND_URL=http://localhost:5173
