--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,27 @@ services:
     container_name: pazpaz-minio
     command: server /data --console-address ":9001"
     environment:
+      # ===================================================================
+      # SECURITY WARNING: Default credentials are for LOCAL DEVELOPMENT ONLY
+      # ===================================================================
+      # The default values below (minioadmin/minioadmin123) are INSECURE and
+      # must NEVER be used in production or any network-accessible environment.
+      #
+      # BEFORE DEPLOYMENT, generate strong credentials:
+      #   export S3_ACCESS_KEY=$(openssl rand -base64 16 | tr -d '/+=' | cut -c1-16)
+      #   export S3_SECRET_KEY=$(openssl rand -base64 32 | tr -d '/+=' | cut -c1-32)
+      #
+      # Add to .env file (gitignored):
+      #   S3_ACCESS_KEY=your-secure-username-here
+      #   S3_SECRET_KEY=your-secure-password-here
+      #
+      # Password Requirements:
+      #   - Minimum 20 characters (32 recommended)
+      #   - Include uppercase, lowercase, numbers, symbols
+      #   - Rotate every 90 days (production), 180 days (development)
+      #
+      # See: backend/docs/storage/S3_CREDENTIAL_MANAGEMENT.md
+      # ===================================================================
       MINIO_ROOT_USER: ${S3_ACCESS_KEY:-minioadmin}
       MINIO_ROOT_PASSWORD: ${S3_SECRET_KEY:-minioadmin123}
       # Note: SSE-S3 encryption is enabled per-bucket via API (see create_storage_buckets.py)
