feat(database): implement SSL/TLS configuration for PostgreSQL connections
This commit introduces SSL/TLS support for PostgreSQL database connections to ensure compliance with HIPAA requirements. Key changes include:

- Updated `docker-compose.yml` to configure SSL certificate handling for the PostgreSQL service.
- Enhanced the `.env.example` file with SSL/TLS configuration options for database connections.
- Implemented SSL verification in the database connection logic within `base.py`, including error handling for SSL verification failures.
- Added a new function in `main.py` to verify the SSL/TLS connection at application startup, logging the status and raising errors as necessary.
- Updated configuration settings in `config.py` to manage SSL parameters.

These updates enhance the security of database connections, ensuring that sensitive data is encrypted in transit.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,40 @@ ENVIRONMENT=local
 # Database
 DATABASE_URL=postgresql+asyncpg://pazpaz:pazpaz@localhost:5432/pazpaz
 
+# Database SSL/TLS Configuration (HIPAA requirement)
+# CRITICAL: SSL/TLS MUST be enabled in production to encrypt PHI data in transit
+#
+# SSL Modes (in order of security, highest to lowest):
+#   - verify-full: Verify certificate and hostname (production recommended)
+#   - verify-ca: Verify certificate only (acceptable for dev/staging)
+#   - require: Require encryption but don't verify certificate
+#   - prefer: Try SSL, fallback to unencrypted (NOT RECOMMENDED)
+#   - allow: Try unencrypted, fallback to SSL (NOT RECOMMENDED)
+#   - disable: No encryption (HIPAA VIOLATION - dev only)
+#
+# Development: Use self-signed certificates (generated via scripts/generate_ssl_certs.sh)
+# Production: Use CA-signed certificates (AWS RDS, Let's Encrypt, etc.)
+#
+DB_SSL_ENABLED=true
+DB_SSL_MODE=verify-ca
+DB_SSL_CA_CERT_PATH=/Users/yussieik/Desktop/projects/pazpaz/backend/certs/ca-cert.pem
+DB_SSL_CLIENT_CERT_PATH=
+DB_SSL_CLIENT_KEY_PATH=
+#
+# Production AWS RDS Example:
+#   DB_SSL_ENABLED=true
+#   DB_SSL_MODE=verify-full
+#   DB_SSL_CA_CERT_PATH=/etc/ssl/certs/rds-ca-2019-root.pem
+#   DB_SSL_CLIENT_CERT_PATH=
+#   DB_SSL_CLIENT_KEY_PATH=
+#
+# To generate self-signed certificates for development:
+#   ./backend/scripts/generate_ssl_certs.sh
+#
+# To download AWS RDS CA certificate:
+#   wget https://truststore.pki.rds.amazonaws.com/global/global-bundle.pem
+#   mv global-bundle.pem /etc/ssl/certs/rds-ca-2019-root.pem
+
 # Redis
 # Generate strong password with: openssl rand -base64 32
 REDIS_PASSWORD=your-strong-redis-password-here-min-32-chars
