feat(security): integrate AWS Secrets Manager for database credentials management
This commit enhances the security of database credentials by implementing AWS Secrets Manager integration. Key changes include:

- Updated `.env.example` to remove default passwords and provide detailed instructions for using AWS Secrets Manager.
- Introduced a `database_url` property in `config.py` to dynamically fetch database credentials based on the environment (production or local).
- Added a new function `get_database_credentials()` in `secrets_manager.py` to handle secure credential retrieval.
- Created a comprehensive test suite for database credential fetching, ensuring robust error handling and security compliance.

These updates improve the security posture of the application by eliminating plaintext passwords and enforcing best practices for credential management.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,41 @@ API_V1_PREFIX=/api/v1
 ENVIRONMENT=local
 
 # Database
-DATABASE_URL=postgresql+asyncpg://pazpaz:pazpaz@localhost:5432/pazpaz
+# SECURITY: In production, database credentials are stored in AWS Secrets Manager
+# Local development uses DATABASE_URL environment variable
+# Production uses AWS Secrets Manager secret: pazpaz/database-credentials
+#
+# Local Development: Set DATABASE_URL with your local credentials
+DATABASE_URL=postgresql+asyncpg://pazpaz:YOUR_SECURE_PASSWORD_HERE@localhost:5432/pazpaz
+#
+# Production AWS Secrets Manager Configuration:
+# Use AWS CLI or Console to create secret with this JSON format:
+# {
+#   "username": "pazpaz",
+#   "password": "GENERATED_STRONG_PASSWORD",
+#   "host": "prod-db.internal",
+#   "port": 5432,
+#   "database": "pazpaz",
+#   "ssl_cert_path": "/etc/ssl/certs/rds-ca-2019-root.pem"
+# }
+#
+# Create secret with AWS CLI:
+# aws secretsmanager create-secret \
+#   --name pazpaz/database-credentials \
+#   --description "PazPaz production database credentials" \
+#   --secret-string file://db-credentials.json
+#
+# Password Requirements:
+#   - Minimum 32 characters (64 recommended)
+#   - Include uppercase, lowercase, numbers, symbols
+#   - No dictionary words or sequential characters
+#   - Rotate every 90 days (HIPAA requirement)
+#
+# Generate strong password:
+#   openssl rand -base64 48 | tr -d '/+=' | cut -c1-64
+#
+# AWS Secrets Manager Secret Name (override if needed):
+DB_SECRETS_MANAGER_KEY_NAME=pazpaz/database-credentials
 
 # Database SSL/TLS Configuration (HIPAA requirement)
 # CRITICAL: SSL/TLS MUST be enabled in production to encrypt PHI data in transit
