feat(security): implement MinIO KMS encryption and verification for file uploads
This commit enhances the security of file uploads by implementing server-side encryption for both MinIO and AWS S3, ensuring compliance with HIPAA requirements. Key changes include:

- Updated `docker-compose.yml` to configure MinIO with KMS encryption.
- Modified `storage.py` to always enable encryption during file uploads and added a verification step to ensure files are encrypted at rest.
- Enhanced `.env.example` with instructions for setting the `MINIO_ENCRYPTION_KEY`.
- Introduced a new function `verify_file_encrypted()` to validate encryption status post-upload, enforcing fail-closed behavior.
- Comprehensive test suite added to validate encryption functionality and compliance.

These updates significantly improve the security posture by ensuring that all PHI file attachments are encrypted at rest and that encryption is actively verified.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -137,6 +137,25 @@ S3_REGION=us-east-1
 #   S3_BUCKET_NAME=pazpaz-attachments-prod
 #   S3_REGION=us-west-2
 
+# MinIO Server-Side Encryption (Development)
+# HIPAA Requirement: §164.312(a)(2)(iv) - Encryption at rest for PHI
+#
+# Generate encryption key with:
+#   python -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+#
+# CRITICAL: This key encrypts all file attachments (SOAP notes, photos, PDFs).
+# - Development: Use environment variable below
+# - Production: Use external KMS (AWS KMS, HashiCorp Vault)
+# - Rotate every 90 days (HIPAA requirement)
+#
+# Key Requirements:
+#   - Must be 32 bytes (256 bits) minimum
+#   - Base64-encoded for MinIO KMS format
+#   - Never commit actual key to version control
+#   - Store production keys in AWS Secrets Manager
+#
+MINIO_ENCRYPTION_KEY=CHANGE_ME_IN_PRODUCTION_32_BYTE_BASE64_KEY
+
 # Frontend
 FRONTEND_URL=http://localhost:5173
 
