--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,8 +92,24 @@ services:
       # ===================================================================
       MINIO_ROOT_USER: ${S3_ACCESS_KEY:-minioadmin}
       MINIO_ROOT_PASSWORD: ${S3_SECRET_KEY:-minioadmin123}
-      # Note: SSE-S3 encryption is enabled per-bucket via API (see create_storage_buckets.py)
-      # MINIO_KMS_AUTO_ENCRYPTION requires external KMS setup (not needed for development)
+
+      # ===================================================================
+      # MinIO Server-Side Encryption (SSE-S3 with KMS)
+      # ===================================================================
+      # Enable server-side encryption for all objects stored in MinIO.
+      # This ensures PHI (Protected Health Information) file attachments
+      # are encrypted at rest, meeting HIPAA compliance requirements.
+      #
+      # MinIO KMS Configuration:
+      # - Uses built-in KMS with secret key (development)
+      # - Production should use external KMS (Vault, AWS KMS via gateway)
+      #
+      # Generate encryption key with:
+      #   python -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+      #
+      # HIPAA Requirement: §164.312(a)(2)(iv) - Encryption at rest
+      # ===================================================================
+      MINIO_KMS_SECRET_KEY: "pazpaz-minio-key:${MINIO_ENCRYPTION_KEY:-CHANGE_ME_IN_PRODUCTION_32_BYTE_BASE64_KEY}"
     ports:
       - "9000:9000"  # S3 API
       - "9001:9001"  # MinIO Console (Web UI)
