feat(security): integrate ClamAV for malware scanning in file uploads
This commit enhances file upload security by integrating ClamAV for malware scanning. Key changes include:

- Added a ClamAV service to `docker-compose.yml` with health checks and volume configuration.
- Updated `pyproject.toml` to include the `clamd` dependency for ClamAV interaction.
- Modified the file validation process in `file_validation.py` to include malware scanning as a new validation layer.
- Created a new utility for malware scanning, ensuring comprehensive detection and logging of malware incidents.
- Updated documentation to reflect the new security measures and testing results.

These updates significantly improve the application's defense against malicious file uploads, ensuring compliance with security standards.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,7 +123,29 @@ services:
       start_period: 10s
     restart: unless-stopped
 
+  clamav:
+    image: clamav/clamav:latest
+    container_name: pazpaz-clamav
+    ports:
+      - "3310:3310"
+    volumes:
+      - clamav_data:/var/lib/clamav
+    networks:
+      - pazpaz
+    healthcheck:
+      test: ["CMD", "clamdscan", "--ping", "3"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 60s  # ClamAV needs time to download virus definitions
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   redis_data:
   minio_data:
+  clamav_data:
+
+networks:
+  pazpaz:
+    driver: bridge
