--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "python-magic>=0.4.27",
     "pillow>=11.3.0",
     "pypdf>=6.1.1",
+    "clamd>=1.0.2",
 ]
 
 [tool.hatch.build.targets.wheel]
