--- a/backend/.env.example
+++ b/backend/.env.example
@@ -167,6 +167,30 @@ S3_REGION=us-east-1
 #
 MINIO_ENCRYPTION_KEY=CHANGE_ME_IN_PRODUCTION_32_BYTE_BASE64_KEY
 
+# Workspace Storage Quotas
+# HIPAA Requirement: §164.308(a)(7)(ii)(B) - Resource management to prevent abuse
+#
+# DEFAULT_WORKSPACE_STORAGE_QUOTA_GB: Default storage quota for new workspaces (in gigabytes)
+# - Default: 10 GB (reasonable for typical therapy practice with SOAP notes + photos)
+# - Calculation: ~1000 sessions × 5 photos/session × 2 MB/photo = ~10 GB
+# - Adjust per workspace via API: PATCH /api/v1/workspaces/{id}/storage/quota
+#
+# Storage quota prevents:
+# - Storage abuse (malicious or accidental over-uploading)
+# - Runaway storage costs (AWS S3/MinIO)
+# - Workspace resource exhaustion
+#
+# Quota enforcement:
+# - Validated BEFORE S3 upload (fail fast, no wasted bandwidth)
+# - Atomically updated AFTER successful upload/delete (prevents race conditions)
+# - Logged for monitoring (quota rejections, usage updates)
+# - 507 Insufficient Storage error when quota exceeded
+#
+# Monitor via API:
+# - GET /api/v1/workspaces/{id}/storage - View current usage, quota, percentage
+#
+DEFAULT_WORKSPACE_STORAGE_QUOTA_GB=10
+
 # Frontend
 FRONTEND_URL=http://localhost:5173
 
