feat(docker): update environment variables and port bindings for security and accessibility
This commit modifies the `docker-compose.yml` and `.env.example` files to enhance security and accessibility. Key changes include:

- Updated PostgreSQL and MinIO passwords to use environment variable placeholders for better security practices.
- Changed service port bindings to localhost only, restricting access to the services from external networks.
- Revised the `.env.example` to provide clearer instructions for generating secure passwords and keys, ensuring compliance with security standards.
- Enhanced validation logic in the configuration to enforce stronger security requirements for sensitive keys and passwords.

These updates improve the overall security posture and usability of the application in development and production environments.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,7 +10,9 @@ ENVIRONMENT=local
 # Production uses AWS Secrets Manager secret: pazpaz/database-credentials
 #
 # Local Development: Set DATABASE_URL with your local credentials
-DATABASE_URL=postgresql+asyncpg://pazpaz:YOUR_SECURE_PASSWORD_HERE@localhost:5432/pazpaz
+# Generate password with: openssl rand -base64 32 | tr -d '/+='
+# Minimum 32 characters required for production, 20 for development
+DATABASE_URL=postgresql+asyncpg://pazpaz:CHANGE_ME_GENERATE_RANDOM_32_CHARS@localhost:5432/pazpaz
 #
 # Production AWS Secrets Manager Configuration:
 # Use AWS CLI or Console to create secret with this JSON format:
@@ -76,12 +78,15 @@ DB_SSL_CLIENT_KEY_PATH=
 #   mv global-bundle.pem /etc/ssl/certs/rds-ca-2019-root.pem
 
 # Redis
-# Generate strong password with: openssl rand -base64 32
-REDIS_PASSWORD=your-strong-redis-password-here-min-32-chars
-REDIS_URL=redis://:${REDIS_PASSWORD}@localhost:6379/0
+# Generate strong password with: openssl rand -base64 32 | tr -d '/+='
+# Minimum 32 characters required
+REDIS_PASSWORD=CHANGE_ME_GENERATE_RANDOM_32_CHARS
+REDIS_URL=redis://:CHANGE_ME_GENERATE_RANDOM_32_CHARS@localhost:6379/0
 
 # Security
-SECRET_KEY=change-me-in-production
+# Generate with: openssl rand -hex 32
+# Minimum 64 characters required for production (32 bytes hex-encoded)
+SECRET_KEY=CHANGE_ME_GENERATE_64_CHAR_HEX_STRING
 ACCESS_TOKEN_EXPIRE_MINUTES=10080
 
 # CSRF Protection
@@ -152,8 +157,9 @@ CSRF_TOKEN_EXPIRE_MINUTES=10080
 # Reference: OWASP A03:2021 Injection, CSP Level 3 Specification
 
 # Encryption (local/dev only - use AWS Secrets Manager in production)
-# Generate with: python -c 'import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())'
-ENCRYPTION_MASTER_KEY=your-base64-encoded-32-byte-key-here
+# Generate with: python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+# Must be 32 bytes (256 bits) base64-encoded
+ENCRYPTION_MASTER_KEY=CHANGE_ME_GENERATE_BASE64_32_BYTES
 
 # AWS Secrets Manager (production only)
 AWS_REGION=us-east-1
@@ -182,9 +188,12 @@ SECRETS_MANAGER_KEY_NAME=pazpaz/encryption-key-v1
 #
 # See docs/storage/S3_CREDENTIAL_MANAGEMENT.md for full guidance
 #
+# Generate credentials:
+#   Access Key (16+ chars): openssl rand -base64 16 | tr -d '/+=' | cut -c1-16
+#   Secret Key (32+ chars): openssl rand -base64 32 | tr -d '/+='
 S3_ENDPOINT_URL=http://localhost:9000
-S3_ACCESS_KEY=your-secure-username-here  # Min 12 chars, change default!
-S3_SECRET_KEY=your-secure-password-here  # Min 20 chars (32 recommended), change default!
+S3_ACCESS_KEY=CHANGE_ME_16_CHARS  # Min 12 chars (16 recommended)
+S3_SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_32_CHARS  # Min 20 chars (32 recommended)
 S3_BUCKET_NAME=pazpaz-attachments
 S3_REGION=us-east-1
 #
@@ -205,7 +214,7 @@ S3_REGION=us-east-1
 # HIPAA Requirement: §164.312(a)(2)(iv) - Encryption at rest for PHI
 #
 # Generate encryption key with:
-#   python -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+#   python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
 #
 # CRITICAL: This key encrypts all file attachments (SOAP notes, photos, PDFs).
 # - Development: Use environment variable below
@@ -218,7 +227,7 @@ S3_REGION=us-east-1
 #   - Never commit actual key to version control
 #   - Store production keys in AWS Secrets Manager
 #
-MINIO_ENCRYPTION_KEY=CHANGE_ME_IN_PRODUCTION_32_BYTE_BASE64_KEY
+MINIO_ENCRYPTION_KEY=CHANGE_ME_GENERATE_BASE64_32_BYTES
 
 # Workspace Storage Quotas
 # HIPAA Requirement: §164.308(a)(7)(ii)(B) - Resource management to prevent abuse
