feat(client): enhance client model and API for date_of_birth encryption and ISO format handling
- Updated the Client model to store date_of_birth as an encrypted ISO format string, improving data protection for PHI.
- Modified API endpoints to convert date_of_birth to ISO format during client creation and updates, ensuring consistent data handling.
- Added field validation in the ClientResponse schema to parse date_of_birth from ISO format back to a date object for API responses.
- Enhanced .env.example with detailed instructions for encryption key management and AWS Secrets Manager integration, aligning with HIPAA compliance requirements.

These changes strengthen the security of sensitive client information and improve the overall data handling process.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -164,13 +164,56 @@ CSRF_TOKEN_EXPIRE_MINUTES=10080
 # Reference: OWASP A03:2021 Injection, CSP Level 3 Specification
 
 # Encryption (local/dev only - use AWS Secrets Manager in production)
-# Generate with: python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
-# Must be 32 bytes (256 bits) base64-encoded
+# SECURITY WARNING: Never commit real encryption keys to git!
+# This key encrypts PHI (client names, contacts, session notes, attachments)
+#
+# Generate with: python3 -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())"
+# Must be 44-character base64-encoded Fernet key (32 bytes + base64 encoding)
+#
+# CRITICAL PRODUCTION REQUIREMENT:
+# - Production/Staging MUST use AWS Secrets Manager (see AWS_SECRETS_MANAGER_SETUP.md)
+# - Local development can use environment variable (acceptable risk)
+# - NEVER commit production keys to version control
+# - Loss of this key = permanent data loss (no recovery possible)
 ENCRYPTION_MASTER_KEY=CHANGE_ME_GENERATE_BASE64_32_BYTES
 
-# AWS Secrets Manager (production only)
+# AWS Secrets Manager Configuration
+# PRODUCTION REQUIREMENT: All secrets stored in AWS Secrets Manager
+# See docs/deployment/AWS_SECRETS_MANAGER_SETUP.md for setup instructions
+#
+# How it works:
+# - Production/Staging: Application fetches secrets from AWS Secrets Manager at runtime
+# - Local Development: Application uses environment variables from .env file
+# - No code changes needed (automatic detection based on ENVIRONMENT)
+#
+# Secrets stored in AWS Secrets Manager:
+# 1. pazpaz/encryption-key-v2 - Encryption master key (AES-256-GCM)
+# 2. pazpaz/jwt-secret - JWT signing key (authentication tokens)
+# 3. pazpaz/database-credentials - PostgreSQL connection credentials
+# 4. pazpaz/redis-url - Redis connection string
+#
+# HIPAA Compliance Benefits:
+# - Centralized secret management (single audit point)
+# - Automatic rotation (90-day requirement)
+# - Comprehensive audit trail (CloudTrail logs all access)
+# - No secrets in version control (eliminates git exposure)
+# - Encryption at rest (AWS KMS AES-256)
+# - Encryption in transit (TLS 1.2+ for API calls)
+#
+# IAM Permissions Required:
+# - Application task role must have secretsmanager:GetSecretValue permission
+# - See docs/deployment/AWS_IAM_ROLES.md for IAM policy configuration
+#
 AWS_REGION=us-east-1
-SECRETS_MANAGER_KEY_NAME=pazpaz/encryption-key-v1
+SECRETS_MANAGER_KEY_NAME=pazpaz/encryption-key-v2  # Current encryption key version
+DB_SECRETS_MANAGER_KEY_NAME=pazpaz/database-credentials  # Database credentials secret
+
+# Migration from v1 to v2:
+# If you have existing data encrypted with pazpaz/encryption-key-v1:
+# - Keep v1 secret active for decryption of historical data
+# - Set SECRETS_MANAGER_KEY_NAME=pazpaz/encryption-key-v2 for NEW encryptions
+# - See docs/security/encryption/KEY_ROTATION_PROCEDURE.md for full migration steps
+# - DO NOT delete v1 until all historical data re-encrypted with v2
 
 # S3/MinIO Storage
 # Development: Use MinIO (localhost:9000)
