feat(security): implement Argon2id password hashing and validation
- Introduced Argon2id as the primary password hashing algorithm, enhancing security against various attack vectors.
- Updated password hashing context to support both Argon2id and bcrypt for backward compatibility during migration.
- Added password strength validation to enforce security requirements, including minimum length and checks against common patterns.
- Implemented a transparent migration strategy from bcrypt to Argon2id, allowing existing users to seamlessly transition to the new hashing method.

These changes significantly improve the security of password management and align with best practices for authentication systems.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "pillow>=11.3.0",
     "pypdf>=6.1.1",
     "clamd>=1.0.2",
+    "argon2-cffi>=25.1.0",
 ]
 
 [tool.hatch.build.targets.wheel]
