feat(tests): enhance test suite with new markers and remove obsolete files
- Added new pytest markers for tests that do not require database access (`no_db`) and for quarterly disaster recovery drills (`quarterly_drill`), improving test categorization and execution flexibility.
- Removed the manual Argon2 verification script and several test files related to appointment API, audit logging, authentication, and other areas, streamlining the test suite and focusing on essential tests.

These changes improve the organization of the test suite and eliminate outdated or redundant files, enhancing overall maintainability.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -71,4 +71,6 @@ asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
 markers = [
     "performance: marks tests as performance tests (run with: pytest -m performance)",
+    "no_db: marks tests that don't require database access (run with: pytest -m no_db)",
+    "quarterly_drill: marks tests for quarterly disaster recovery drills (run with: pytest -m quarterly_drill)",
 ]
