feat(tests): enhance test suite with Docker service management and validation improvements
- Added `pytest-docker` as a development dependency to facilitate Docker service management in tests.
- Refactored appointment and session validation logic to utilize `PydanticCustomError` for more informative error handling.
- Introduced new functions in the test suite to manage Docker services, ensuring MinIO and ClamAV are running before integration tests, improving test reliability and setup.
- Updated test cases to use service functions for token management, enhancing security and consistency in handling magic link tokens.

These changes improve the robustness and maintainability of the test suite while enhancing error reporting and service management during testing.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -51,6 +51,7 @@ dev-dependencies = [
     "pytest>=8.3.0",
     "pytest-asyncio>=0.24.0",
     "pytest-cov>=5.0.0",
+    "pytest-docker>=3.2.3",
     "pytest-xdist>=3.8.0",
     "ruff>=0.7.0",
 ]
