--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "focus-trap": "^7.6.5",
+    "idb": "^8.0.3",
     "pinia": "^3.0.3",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1",
