feat(env): add encryption master key generation instructions to .env.example
Updated the .env.example file to include instructions for generating the ENCRYPTION_MASTER_KEY, which is essential for HIPAA compliance and encrypting sensitive data. This addition enhances the clarity of environment variable requirements for developers.

Related: #encryption

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 #   S3_SECRET_KEY: openssl rand -base64 32 | tr -d '/+='
 #   REDIS_PASSWORD: openssl rand -base64 32 | tr -d '/+='
 #   MINIO_ENCRYPTION_KEY: python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+#   ENCRYPTION_MASTER_KEY: python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
 
 # Database Security
 # Generate with: openssl rand -base64 32 | tr -d '/+='
@@ -32,3 +33,10 @@ S3_SECRET_KEY=CHANGE_ME_GENERATE_RANDOM_32_CHARS
 # Generate with: python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
 # Must be 32 bytes (256 bits) base64-encoded
 MINIO_ENCRYPTION_KEY=CHANGE_ME_GENERATE_BASE64_32_BYTES
+
+# Application Encryption (PHI encryption for database fields)
+# Required for HIPAA compliance §164.312(a)(2)(iv) - Encryption at rest
+# Used by backend API and arq-worker for encrypting/decrypting sensitive data (SOAP notes, client PII)
+# Generate with: python3 -c "import secrets,base64; print(base64.b64encode(secrets.token_bytes(32)).decode())"
+# Must be 32 bytes (256 bits) base64-encoded
+ENCRYPTION_MASTER_KEY=CHANGE_ME_GENERATE_BASE64_32_BYTES
