chore: update .gitignore to include MCP configuration and environment files
Changes:
- Added .mcp.json to ignore list for sensitive configuration
- Included .env.prod for production environment variables
- Updated .augment/rules/byterover-rules.md to remove .env.prod reference

Impact:
- Enhances security by preventing sensitive files from being tracked
- Streamlines environment configuration for development and production

--- a/.gitignore
+++ b/.gitignore
@@ -69,4 +69,9 @@ logs/
 .cursor/rules/byterover-rules.mdc
 .kiro/steering/byterover-rules.md
 .qoder/rules/byterover-rules.md
-.augment/rules/byterover-rules.md.env.prod
+.augment/rules/byterover-rules.md
+
+# MCP Configuration (contains GitHub token)
+.mcp.json
+
+.env.prod
