feat(nginx): implement production reverse proxy with security hardening
- Create standalone nginx directory with production configuration
- Implement comprehensive security headers (HSTS, CSP, X-Frame-Options, etc.)
- Configure rate limiting for API (10r/s), auth (5r/m), static (100r/s), WebSocket (5r/s)
- Set up proxy routing for frontend, /api/*, and /ws/* endpoints
- Add gzip compression for text-based content
- Create custom error pages (429, 50x)
- Configure buffer sizes and timeouts for DoS protection
- Prepare SSL/TLS configuration for Let's Encrypt integration
- Update docker-compose.prod.yml to use new nginx service
- Add frontend service to serve Vue.js application
- Ensure nginx is the ONLY service with exposed ports (80, 443)
- Add nginx_logs volume for log persistence and rotation

Security features:
- Network isolation: nginx connects to frontend and backend networks only
- Request size limits: 100MB max for file attachments
- Hidden server tokens to avoid version exposure
- Blocked access to sensitive files (.git, .env, .sql, etc.)
- Modern TLS configuration prepared (commented for future SSL setup)

Part of Phase 3, Step 2 (Tasks 3.10-3.13) of CI/CD Implementation Plan

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -19,39 +19,40 @@ version: '3.8'
 
 services:
   # =============================================================================
-  # NGINX - Reverse Proxy and Static File Server
+  # NGINX - Reverse Proxy and Load Balancer
   # =============================================================================
-  # Serves frontend static files and proxies API/WebSocket requests
+  # Main entry point for all traffic - handles SSL termination and routing
   # The ONLY service exposed to the host network
   nginx:
-    image: nginx:stable-alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    image: pazpaz/nginx:${VERSION:-latest}
     container_name: pazpaz-nginx
     networks:
-      - frontend  # Public-facing network
-      - backend   # Internal network to reach API
+      - frontend  # Public-facing network to reach frontend service
+      - backend   # Internal network to reach API service
     ports:
       - "80:80"     # HTTP (will redirect to HTTPS in production)
       - "443:443"   # HTTPS with SSL/TLS
     volumes:
-      # Nginx configuration (production version)
-      - ./frontend/nginx.prod.conf:/etc/nginx/nginx.conf:ro
-      # Frontend static files (built Vue app)
-      - frontend_dist:/usr/share/nginx/html:ro
+      # Nginx configuration
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       # SSL certificates (Let's Encrypt or custom)
-      - ./certs/ssl:/etc/nginx/certs:ro
+      - ./certs:/etc/letsencrypt:ro
       # Let's Encrypt challenge directory
-      - ./certs/acme-challenge:/var/www/acme-challenge:ro
+      - ./certs/acme-challenge:/var/www/acme-challenge:rw
       # Custom error pages
-      - ./frontend/error-pages:/usr/share/nginx/error-pages:ro
-    environment:
-      - NGINX_ENVSUBST_OUTPUT_DIR=/etc/nginx
-      - API_HOST=api
-      - API_PORT=8000
+      - ./nginx/error-pages:/usr/share/nginx/html/errors:ro
+      # Nginx logs
+      - nginx_logs:/var/log/nginx
     depends_on:
       api:
         condition: service_healthy
+      frontend:
+        condition: service_started
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/health"]
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -65,10 +66,10 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '2.0'
-          memory: 512M
-        reservations:
           cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
           memory: 128M
     labels:
       - "app=pazpaz"
@@ -505,6 +506,48 @@ services:
       - "auto-update=enabled"
 
   # =============================================================================
+  # Frontend - Vue.js Application Server
+  # =============================================================================
+  # Serves the built Vue.js application
+  # Only accessible through the main nginx reverse proxy
+  frontend:
+    image: ghcr.io/${GITHUB_REPOSITORY:-yourusername/pazpaz}/frontend:${IMAGE_TAG:-latest}
+    container_name: pazpaz-frontend
+    networks:
+      - frontend  # Internal frontend network
+    # NO ports exposed to host - only accessible through nginx
+    volumes:
+      # Frontend configuration (if using the frontend's nginx)
+      - ./frontend/nginx.prod.conf:/etc/nginx/nginx.conf:ro
+      # Frontend dist files (optional, if not baked into image)
+      - frontend_dist:/usr/share/nginx/html:ro
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:80/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    deploy:
+      resources:
+        limits:
+          cpus: '0.5'
+          memory: 256M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+    labels:
+      - "app=pazpaz"
+      - "component=frontend"
+      - "environment=production"
+      - "version=${VERSION:-latest}"
+
+  # =============================================================================
   # Frontend Builder (Optional - for deployment convenience)
   # =============================================================================
   # Builds frontend and copies dist to shared volume
@@ -600,6 +643,15 @@ volumes:
     labels:
       - "app=pazpaz"
       - "type=logs"
+      - "rotation=enabled"
+
+  # Nginx access and error logs
+  nginx_logs:
+    driver: local
+    labels:
+      - "app=pazpaz"
+      - "type=logs"
+      - "component=nginx"
       - "rotation=enabled"
 
 # =============================================================================
